# Templates

./: CMakeLists.txt  MyClass.cpp  MyClass.h  abbreviatedFunctionTemplates.cpp  advanceConstexprIf.cpp  advanceTagDispatching.cpp  allAnyNone.cpp  automaticReturnTypeAuto.cpp  automaticReturnTypeAutoDecltype.cpp  automaticReturnTypeConcepts.cpp  automaticReturnTypeTraits.cpp  built_inLiteral.cpp  conceptClassTemplate.cpp  conceptMemberFunction.cpp  conceptsDefinitionEqual.cpp  conceptsDefinitionOrdering.cpp  conceptsIntegralVariations.cpp  conceptsOverloading.cpp  conceptsOverloadingFunctionTemplates.cpp  conceptsSpecialization.cpp  constExpression.cpp  constExpressionCpp14.cpp  constexprIf.cpp  constexprIfPower.cpp  explicitTemplateInstantiation.cpp  foldExpression.cpp  genericLambdaTemplate.cpp  mainMyClass.cpp  placeholders.cpp  regularSemiRegular.cpp  signedUnsignedIntegrals.cpp  templateArgumentDeduction.cpp  templateArgumentDeductionClass.cpp  templateAutomaticReturnType.cpp  templateCRTPRelational.cpp  templateClassTemplate.cpp  templateClassTemplateGeneralFriendship.cpp  templateClassTemplateInheritance.cpp  templateClassTemplateMethods.cpp  templateClassTemplateSpecialFriendship.cpp  (+23 more)
solutions/: .directory  CMakeLists.txt  Makefile  advanceConstexprIfImplementation.cpp  advanceTagDispatchingImplementation.cpp  conceptArithmetic.cpp  conceptArithmeticTwoTypes.cpp  dispatchConcepts.cpp  functionTemplateArgumentDeductionReference.cpp  functionTemplateArgumentDeductionUniversalReference.cpp  functionTemplateArgumentDeductionValue.cpp  gcdVariations.cpp  implicitTemplateInstantiation.cpp  isSame.cpp  power1.cpp  power2.cpp  power3.cpp  printf.cpp  pushBackFoldExpressions.cpp  sum.cpp  sumConcepts.cpp  templateCRTPCheck.cpp  templateClassTemplateMethods.cpp  templateClassTemplateMethods2.cpp  templateClassTemplateMethods3.cpp  templateFactorial.cpp  templateGcd.cpp  templateGcdCommon.cpp  templateGcdConditional.cpp  templateGcdIntegral.cpp  templateGcdSFINAE.cpp  templateTagDispatchingImplementation.cpp  templateTemplateTemplatesParameter.cpp  templateTypeTraitsModifications.cpp  templateTypes.cpp  templatesCRTPShareMe.cpp  typeDeduction.cpp  typeErasureTypeInfo.cpp  vectorArithmeticExpressionTemplatesImproved.cpp
